--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -16,6 +16,13 @@ services:
     countryService:
         class: App\Services\CountryService
 
+    console_command.countryImport:
+        class: App\Command\CountryCsvImportCommand
+        arguments:
+            - "@doctrine.orm.entity_manager"
+        tags:
+            - {name: console.command}
+
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
