--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -16,6 +16,9 @@ services:
     countryService:
         class: App\Services\CountryService
 
+    countryApiService:
+        class: App\Services\CountryApiService
+
     console_command.countryImport:
         class: App\Command\CountryCsvImportCommand
         arguments:
